--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-pwa": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
+    "bulma": "^0.7.4",
     "vue-template-compiler": "^2.5.21"
   }
 }
