--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^12.0.0",
+    "@ckeditor/ckeditor5-vue": "^1.0.0-beta.1",
     "register-service-worker": "^1.5.2",
     "toastr": "^2.1.4",
     "vue": "^2.5.22",
@@ -18,6 +20,7 @@
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-pwa": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
+    "axios": "^0.18.0",
     "bulma": "^0.7.4",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
