--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^12.0.0",
     "@ckeditor/ckeditor5-vue": "^1.0.0-beta.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
+    "i": "^0.3.6",
+    "npm": "^6.9.0",
     "register-service-worker": "^1.5.2",
     "toastr": "^2.1.4",
     "vue": "^2.5.22",
