--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/vue-fontawesome": "^0.1.5",
+    "apexcharts": "^3.6.3",
+    "element-ui": "^2.6.1",
     "i": "^0.3.6",
     "npm": "^6.9.0",
     "register-service-worker": "^1.5.2",
     "toastr": "^2.1.4",
     "vue": "^2.5.22",
+    "vue-apexcharts": "^1.3.1",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
