--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "toastr": "^2.1.4",
     "vue": "^2.5.22",
     "vue-apexcharts": "^1.3.1",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
